...
                android:layout_margin="@dimen/image_widget_margin"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textViewDriverName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:layout_margin="@dimen/text_widget_margin"
                app:layout_constraintTop_toTopOf="parent"
...
